2009-12-02  ebin <yutaka@ebine.org>

	* sabel/http/*: httpパッケージ更新。移植完了。

2009-12-01  ebin <yutaka@ebine.org>

	* sabel/http/*: Zend Frameworkから移植（CurlとかProxyとか未完了）。

2009-11-30  ebin <yutaka@ebine.org>

	* sabel/kvs/Xml.php: ファイルロック実装。

2009-11-27  ebin <yutaka@ebine.org>

	* sabel/session/*: sessionパッケージ改修。

2009-11-27  ebin <yutaka@ebine.org>

	* sabel/functions/core.php: get_server_name()関数追加。environment()関数の削
	除。それに関わる箇所の変更。lib/Cache.php作り直し。

2009-11-27  ebin <yutaka@ebine.org>

	* sabel/rss/*: rssパッケージ改修。

2009-11-24  ebin <yutaka@ebine.org>

	* sabel/xml/Element.php: Sabel.jsに合わせ、insertPreviousSibling,
	insertNextSiblingメソッド実装。insertBefore, insertAfterメソッド改修。

2009-11-24  ebin <yutaka@ebine.org>

	* sabel/controller/Page.php: __get()と__set()をpublicに修正。
	* sabel/cache: キャッシュクラス内部でKVSパッケージを使用するように変更。

2009-11-24  ebin <yutaka@ebine.org>

	* sabel/db/Model.php: Sabel_Db_ModelにselectForUpdateメソッド追加。

2009-11-24  ebin <yutaka@ebine.org>

	* sabel/kvs: KVS(Key-Value-Store)パッケージの追加。

2009-11-23  hamaco  <hamanaka.kazuhiro@gmail.com>

	* Sabel.js (Sabel.Widget.Calendar): 色々と改善。
	* Sabel.js (Sabel.Element): insertPreviousSibling, insertNextSiblingメソッド追加。

2009-11-23  MoriReo <mori.reo@gmail.com>

	* sabel/Container.php: 設定クラスのbind->toにインスタンスを指定可能に変更。

2009-11-22  MoriReo <mori.reo@gmail.com>

	* sabel/Preference: パッケージを追加。

2009-11-21  Ebin <yutaka@ebine.org>

	* lib/Cache.php: lib/cache（キャッシュユーティリティ）を作成。

2009-11-19  Ebin <yutaka@ebine.org>

	* sabel/Functions.php: 削除し、sabel/functions/core.phpと
	sabel/functions/db.phpに分けた。

2009-11-18  Ebin <yutaka@ebine.org>

	* sabel/xml/Document.php: newできないように変更。

2009-11-17  Ebin <yutaka@ebine.org>

	* sabel/xml/*: 使い易さの改善。

2009-11-14  MoriReo <mori.reo@gmail.com>

	* sabel/Container.php: 名前付きでの設定インタフェイスを削除。コードの改善。

2009-11-13  Ebin <yutaka@ebine.org>

	* sabel/Bus.php: プロセッサINSERT用のメソッドinsertProcessor追加。

2009-11-12  MoriReo <mori.reo@gmail.com>

	* sabel/Container.php: Sabel_Containerのload()時に、複数の設定クラスを
	指定できるように変更。
